<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatarIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/select_image"
            app:layout_constraintBottom_toTopOf="@+id/nameEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/lastNameEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarIv" />

        <EditText
            android:id="@+id/lastNameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_et"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/studentIdEt"
            app:layout_constraintEnd_toEndOf="@+id/nameEt"
            app:layout_constraintStart_toStartOf="@+id/nameEt"
            app:layout_constraintTop_toBottomOf="@+id/nameEt" />

        <EditText
            android:id="@+id/studentIdEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/student_id_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/depTv"
            app:layout_constraintEnd_toEndOf="@+id/lastNameEt"
            app:layout_constraintStart_toStartOf="@+id/lastNameEt"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEt" />

        <TextView
            android:id="@+id/depTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_txt"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/departmentRg"
            app:layout_constraintStart_toStartOf="@+id/studentIdEt"
            app:layout_constraintTop_toBottomOf="@+id/studentIdEt" />

        <RadioGroup
            android:id="@+id/departmentRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/saveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/depTv"
            app:layout_constraintTop_toBottomOf="@+id/depTv">

            <RadioButton
                android:id="@+id/csRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cs_rb_text" />

            <RadioButton
                android:id="@+id/sisRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sis_rb_txt" />

            <RadioButton
                android:id="@+id/bioRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio_rb_text" />

            <RadioButton
                android:id="@+id/otherRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_rb_txt" />
        </RadioGroup>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departmentRg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>